--- a/admin/css/admin-settings.less
+++ b/admin/css/admin-settings.less
@@ -5,10 +5,6 @@
         display: block;
         margin: 10px 0;
 
-        span.setting-description, .fontsampler-admin-settings-styling small {
-            display: inline-block;
-            width: 23em;
-        }
         span.styling-description {
             float: left;
         }
@@ -18,13 +14,11 @@
         }
         span input[type="text"],
         span input.current-value {
-            float: right;
-            margin: 0 1em;
             width: 3em;
         }
-        input[type="range"] {
-            width: 20em;
-        }
+        //input[type="range"] {
+        //    width: 20em;
+        //}
         textarea {
             clear: both;
             display: block;
@@ -33,9 +27,9 @@
             display: block;
             margin-bottom: 1em;
         }
-        input[type="text"] {
-            width: 9em;
-        }
+        //input[type="text"] {
+        //    width: 9em;
+        //}
 
 
         input.fontsampler-admin-slider-label {
