--- a/includes/options.twig
+++ b/includes/options.twig
@@ -1,4 +1,5 @@
 <h2>Options</h2>
+{% if not settings %}
 <label class="fontsampler-radio">
     <input type="radio" name="use_default_options"
            value="1" {% if set.use_defaults == 1 %} checked="checked" {% endif %}>
@@ -9,20 +10,21 @@
            value="0" {% if set.use_defaults == 0 %} checked="checked" {% endif %}>
     <span>Use custom settings</span>
 </label>
+{% endif %}
 
-<div class="fontsampler-options">
+<div class="fontsampler-options {% if settings %} fontsampler-options-settings {% endif %}">
     <h3>Basic</h3>
     <fieldset>
-        {% include 'fontsampler-basic.twig' %}
+        {% include 'partials/options-basic.twig' %}
     </fieldset>
 
     <h3>Features</h3>
     <fieldset>
-        {% include 'fontsampler-options.twig' %}
+        {% include 'partials/options-features.twig' %}
     </fieldset>
 
     <h3>Styling</h3>
     <fieldset>
-        {% include 'fontsampler-styles.twig' %}
+        {% include 'partials/options-styles.twig' %}
     </fieldset>
 </div>
