--- a/includes/partials/options-styles.twig
+++ b/includes/partials/options-styles.twig
@@ -1,19 +1,19 @@
 	{#Color pickers for basic colors#}
-	{{  include( 'styles-color-field.twig', {
+	{{  include( 'partials/styles-color-field.twig', {
 		label: 'Text color',
 		name: 'css_color_text',
 		description: 'Color of the fontsampler text',
 		value: set['css_color_text'],
 		default: defaults['css_color_text']
 	}) }}
-	{{  include( 'styles-color-field.twig', {
+	{{  include( 'partials/styles-color-field.twig', {
 		label: 'Background color',
 		name: 'css_color_background',
 		description: 'Color of the fontsampler background',
 		value: set['css_color_background'],
 		default: defaults['css_color_background']
 	}) }}
-	{{  include( 'styles-color-field.twig', {
+	{{  include( 'partials/styles-color-field.twig', {
 		label: 'Label text color',
 		name: 'css_color_label',
 		description: 'Text color of the UI labels',
@@ -22,13 +22,13 @@
 	}) }}
 
 	{#CSS value fields (font size, etc)#}
-	{{	include( 'styles-css-field.twig', {
+	{{	include( 'partials/styles-css-field.twig', {
 		name: 'css_size_label',
 		description: 'Font size of the UI labels:',
 		additional: "You can use any valid <code>font-size</code> CSS declaration (Use 'inherit' for default look).",
 		default: defaults['css_size_label']
 	}) }}
-	{{ 	include( 'styles-css-field.twig', {
+	{{ 	include( 'partials/styles-css-field.twig', {
 		name: 'css_fontfamily_label',
 		description: 'Font family of the UI labels:',
 		additional: "You can use any valid <code>font-family</code> CSS declaration (Use 'inherit' for default look).",
@@ -36,28 +36,28 @@
 	}) }}
 
 	{#Color pickers for various aspects#}
-	{{  include( 'styles-color-field.twig', {
+	{{  include( 'partials/styles-color-field.twig', {
 		label: 'Highlight color',
 		name: 'css_color_highlight',
 		description: 'Background color of the dropdown items',
 		value: set['css_color_highlight'],
 		default: defaults['css_color_highlight']
 	}) }}
-	{{  include( 'styles-color-field.twig', {
+	{{  include( 'partials/styles-color-field.twig', {
 		label: 'Highlight color (hover)',
 		name: 'css_color_highlight_hover',
 		description: 'Background color of the dropdown items when hovered',
 		value: set['css_color_highlight_hover'],
 		default: defaults['css_color_highlight_hover']
 	}) }}
-	{{  include( 'styles-color-field.twig', {
+	{{  include( 'partials/styles-color-field.twig', {
 		label: 'Line color',
 		name: 'css_color_line',
 		description: 'Color of the slider and dropdown line',
 		value: set['css_color_line'],
 		default: defaults['css_color_line']
 	}) }}
-	{{  include( 'styles-color-field.twig', {
+	{{  include( 'partials/styles-color-field.twig', {
 		label: 'Slider handle color',
 		name: 'css_color_handle',
 		description: 'Color of the slider handle',
@@ -66,21 +66,21 @@
 	}) }}
 
 	{#Css value fields#}
-	{{ 	include( 'styles-css-field.twig', {
+	{{ 	include( 'partials/styles-css-field.twig', {
 		label: 'Column gutter',
 		name: 'css_column_gutter',
 		description: 'UI columns gutter',
 		additional: "You can use any valid <code>size</code> CSS declaration (Default: 10px).",
 		default: defaults['css_column_gutter']
 	}) }}
-	{{ 	include( 'styles-css-field.twig', {
+	{{ 	include( 'partials/styles-css-field.twig', {
 		label: 'Row gutter',
 		name: 'css_row_gutter',
 		description: 'UI rows gutter',
 		additional: "You can use any valid <code>size</code> CSS declaration (Default: 10px).",
 		default: defaults['css_row_gutter']
 	}) }}
-	{{ 	include( 'styles-css-field.twig', {
+	{{ 	include( 'partials/styles-css-field.twig', {
 		label: 'Row height',
 		name: 'css_row_height',
 		description: 'UI rows height:',
