--- a/includes/partials/options-features-sampletexts.twig
+++ b/includes/partials/options-features-sampletexts.twig
@@ -1,4 +1,4 @@
-{% extends 'options-row.twig' %}
+{% extends 'partials/options-row.twig' %}
 
 {% block label %}Sample texts{% endblock %}
 
@@ -13,9 +13,11 @@
 {% endblock %}
 
 {% block default %}
-    <label class="fontsampler-radio">
-        <input type="radio" name="sampletexts_use_default" value="1"
-            {% if set['sample_texts'] is empty %} checked="checked" {% endif %}>
-        <span>Use default: <textarea disabled class="fontsampler-sample_texts">{{ defaults['sample_texts'] }}</textarea></span>
-    </label>
+    {% if not settings %}
+        <label class="fontsampler-radio">
+            <input type="radio" name="sampletexts_use_default" value="1"
+                {% if set['sample_texts'] is empty %} checked="checked" {% endif %}>
+            <span>Use default: <textarea disabled class="fontsampler-sample_texts">{{ defaults['sample_texts'] }}</textarea></span>
+        </label>
+    {% endif %}
 {% endblock %}
