--- a/includes/partials/slider.twig
+++ b/includes/partials/slider.twig
@@ -3,12 +3,12 @@
             <input data-name="{{ name }}"
                    class="current-value"
                    value="{{ value }}"
-                   data-validation="number"
-                   data-validation-allowing="range[1;256]">
+                   {#data-validation="number"#}
+                   {#data-validation-allowing="range[1;256]"#}>
 		</span>
     <div class="slider">
-        <input type="range" name="{{ name }}_slider"
+        <input type="range" name="{{ name }}"
                value="{{ value }}"
-               min="1" max="255">
+               {#min="1" max="255"#}>
     </div>
 </label>
