--- a/includes/partials/styles-color-field.twig
+++ b/includes/partials/styles-color-field.twig
@@ -1,4 +1,4 @@
-{% extends 'options-row.twig' %}
+{% extends 'partials/options-row.twig' %}
 
 {% block label %}{{ label }}<small>{{ description }}</small>{% endblock %}
 
@@ -17,13 +17,15 @@
 {% endblock %}
 
 {% block default %}
-<label class="fontsampler-radio">
-    <input type="radio" name="{{ name }}_use_default" value="1"
-            {% if value is empty %} checked="checked" {% endif %}>
-    <span>Use default:
-    <div class="fontsampler-css-color-block"
-         style="background-color: {{ default }};"></div>
-    <code>{{ default }}</code>
-    </span>
-</label>
+    {% if not settings %}
+        <label class="fontsampler-radio">
+            <input type="radio" name="{{ name }}_use_default" value="1"
+                    {% if value is empty %} checked="checked" {% endif %}>
+            <span>Use default:
+            <div class="fontsampler-css-color-block"
+                 style="background-color: {{ default }};"></div>
+            <code>{{ default }}</code>
+            </span>
+        </label>
+    {% endif %}
 {% endblock %}
